[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
    {name = "jamrabhi", email = "jamrabhi@student.42.fr"},
]
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ft_package", "42"]
license = "MIT"
dynamic = ["version"]