[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
    {name = "jamrabhi"},
    {email = "jamrabhi@student.42.fr"},
]
description = "A sample test package"
requires-python = ">=3.10"
keywords = ["ft_package", "42"]
license = "MIT"

[project.urls]
Homepage = "https://github.com/jamrabhi/"
